...
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/box_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLength="40"
                        />
        </com.google.android.material.textfield.TextInputLayout>
...
<!--            app:layout_constraintVertical_bias="0.06"-->
<!--            app:shapeAppearance="@style/ShapeAppearance.avisio.SmallComponent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_box"
        android:contentDescription="@string/create_box_fab_content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_check" />
...
