...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_new_box"
        android:text="@string/fab_create_box_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
...
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintVertical_bias="0.989"
        app:icon="@drawable/ic_create_folder"
        android:contentDescription="@string/box_list_fab_content_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_expand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
