...
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_flexbox"
            app:layout_constraintVertical_bias="0.030" />

        <Spinner
            android:id="@+id/card_type_spinner"
            android:layout_width="277dp"
            android:layout_height="61dp"
            android:contentDescription="@string/create_card_type_spinner_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
...

        </ImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit_card"
            android:contentDescription="@string/create_card_fab_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_check"/>
...
