...
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/question_input_layout"
            app:layout_constraintVertical_bias="0.25"/>

        <Button
            android:id="@+id/resolve_question_button"
            android:layout_width="326dp"
            android:layout_height="52dp"
            android:text="@string/learn_activity_resolve_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
